# x86-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-tidy.sh
1_1/: exercise.c
1_2/: exercise.c
1_3/: exercise.c
src/: CMakeLists.txt  common.cpp  common.hpp  emulator.cpp  emulator.hpp  instruction.cpp  instruction.hpp  main.cpp  program.cpp  program.hpp  simulator.cpp  simulator.hpp  test.cpp
tests/: direct_jmp_call_within_segment.asm  function_call.asm  function_call.asm.txt  recursive_call.asm  recursive_call.asm.txt  short_memory.asm  short_memory.asm.txt
